# Sanctuary_Coding_Challenge

./: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  DESIGN_NOTES.txt  package.xml
config/: fk_params.yaml
include/planar_kinematics/: KDL_FK.hpp  Planar3R.hpp
launch/: kinematics_launch.py
src/: fk_node.cpp  ik_node.cpp
test/: test_planar3r.cpp
urdf/: planar3r.urdf
