<?xml version="1.0"?>
<package format="2">
  <name>planar_kinematics</name>
  <version>0.1.0</version>
  <description>Planar 3-link RRR kinematics (single unified class)</description>
  <maintainer email="rathinshah96@gmail.com">Rathin Shah</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>urdfdom_headers</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
